<resources>
    <string name="app_name">GroupContact</string>

    <string name="logo_desc">Splash Screen Using Logo</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_edit">Edit</string>
    <string name="title_activity_main">GroupContact</string>
    <string name="title_activity_user_list">UserList</string>
    <string name="title_activity_create_user">Login</string>

    <string name="action_search">Search</string>
    <string name="action_save">Save</string>
    <string name="action_refresh">Refresh</string>

    <string name="enter_name">Name</string>
    <string name="enter_phone">Phone Number</string>
    <string name="action_create_user">Login</string>

    <string name="hint_search_group">Group Name</string>
    <string name="hint_enter_token">Access Token</string>
    <string name="join_group">Join</string>
    <string name="cancel">Cancel</string>
    <string name="error_join_group">Failed to Join</string>
    <string name="success_join_group">Succeed to Join</string>
    <string name="search_empty_result">No Results</string>

    <string name="label_user_name">Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_wechat">WeChat</string>
    <string name="action_save_user">Save</string>
    <string name="success_save_user">Saved Successfully</string>
    <string name="fail_save_user">Failed to Save Your Modification</string>
    <string name="title_activity_search">SearchGroup</string>

    <string name="title_activity_user_info">Profile</string>

    <string name="user_operation">Operation</string>
    <string name="user_operation_call">Call</string>
    <string name="user_operation_sms">SMS</string>

    <string name="loading_user_list">Loading&#8230;</string>
    <string name="tip_press_to_exit">Press Again to Exit</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="add_to_friend">Add As Friend</string>
    <string name="success_add_friend">Add Friend Successfully</string>
    <string name="delete_friend">Delete</string>
    <string name="success_delete_friend">Delete Friend Successfully</string>
    <string name="title_activity_user_add">AddFriend</string>

    <string name="action_add_user">Add Friend</string>
    <string name="action_create_group">CreateGroup</string>
    <string name="title_activity_group_create">CreateGroup</string>

    <string name="hello_world">Hello world!</string>
    <string name="enter_group_modify">Modify Token</string>
    <string name="enter_group_access">Access Token</string>
    <string name="enter_group_name">Group Name</string>
    <string name="enter_group_desc">Group Description</string>
    <string name="success_create_user">Create Group Successfully..</string>
    <string name="action_share">Share</string>

    <string name="empty_now">Empty</string>
    <string name="enter_password">Six Digit Password</string>
    <string name="setup_name">Setup Name</string>
    <string name="progress_wait">Loading</string>
    <string name="user_create_save">Save</string>
    <string name="success_login">Login Successfully</string>
    <string name="success_register">Register Successfully</string>
    <string name="label_user_password">Password</string>
    <string name="label_group_modify">Modify Password</string>
    <string name="label_group_access">Access Password</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="label_old_password">Old Password:</string>
    <string name="label_new_password">New Password:</string>
    <string name="reset_password">Reset</string>
    <string name="success_reset_password">Reset Password Successfully</string>
    <string name="action_remove_friend">Remove Friend</string>

    <string name="internet_failure">Fail to Access Internet</string>
    <string name="storage_failure">Fail to Store Information</string>
    <string name="storage_load_failure">Fail to Load Information</string>
    <string name="group_storage">group.s</string>
    <string name="friend_storage">friend.s</string>
    <string name="profile_storage">profile.s</string>

    <string name="action_leave_group">Leave Group</string>
    <string name="success_leave_group">Leave Group Successfully</string>
    <string name="title_activity_scan">ScanQRCode</string>
    <string name="action_send_code">SendCode</string>
    <string name="enter_code">EnterCode</string>
    <string name="error_network">Network Disconnected</string>
    <string name="title_activity_user_edit">EditUser</string>
    <string name="title_activity_qrcode">My QR Code</string>
    <string name="tip_scan_add_friend">Scan this code to add me as friend</string>
    <string name="network_required_for_upgrade">Please Connect to Network for Upgrade</string>
    <string name="error_scan_qrcode">The QR Code Can not be Recognized</string>
    <string name="avatarContentDesc">Avatar</string>
    <string name="action_confirm">Conform</string>
    <string name="action_add">Add</string>
    <string name="action_search_group">Search Group</string>
    <string name="title_activity_action_sheet">ActionSheetActivity</string>
    <string name="success_copy">Copy Successfully</string>
    <string name="action_create">Create</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>

    <string name="error_login">Login Failed</string>
    <string name="progress_login">Login in Progress</string>
    <string name="error_register">Register Failed</string>
    <string name="progress_register">Register in Progress</string>
    <string name="setup_password">Setup Six Digit Password</string>
    <string name="action_leave">Leave</string>
    <string name="action_cancel">Cancel</string>
    <string name="save_user_info">Saving</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="action_send">Send</string>
    <string name="send_error">Fail</string>
    <string name="send_complete">Sent</string>
    <string name="adding_friend">Adding In Progress</string>
    <string name="creating_group">Creating In Progress</string>
    <string name="deleting_friend">Deleting In Progress</string>
    <string name="leaving_group">Leaving In Progress</string>
    <string name="joining_group">Joining In Progress</string>
    <string name="contentDesc">content description</string>
    <string name="action_more">More</string>
    <string name="success_save">Save Successfully</string>
    <string name="error_save">Save Failed</string>
    <string name="progress_save">Saving in Progress</string>
    <string name="title_activity_more_field">More</string>

    <string name="enter_access_token">Enter Access Token</string>
    <string name="resettings_password">Password Resetting</string>
</resources>
