<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/phone"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/enter_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/password"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/edit_text_last_bg"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:maxLength="6" />

        <com.dd.processbutton.iml.ActionProcessButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/action_login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:pb_colorComplete="@color/green_complete"
            app:pb_colorError="@color/red_error"
            app:pb_colorNormal="@color/blue_normal"
            app:pb_colorPressed="@color/blue_pressed"
            app:pb_colorProgress="@color/purple_progress"
            app:pb_textComplete="@string/success_login"
            app:pb_textError="@string/error_login"
            app:pb_textProgress="@string/progress_login" />

    </LinearLayout>

</ScrollView>