<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="seaice.app.groupcontact.GroupCreateActivity">

    <seaice.app.groupcontact.view.NavBarView
        android:id="@+id/navBar"
        style="@style/NavBar"
        app:navRightIcon="@mipmap/ic_action_tick"
        app:navTitle="@string/title_activity_group_create" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/navBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/group_create_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/enter_group_name"
                android:textColor="@color/edit_color" />

            <EditText
                android:id="@+id/group_create_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_create_name"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/enter_group_desc"
                android:textColor="@color/edit_color" />

            <EditText
                android:id="@+id/group_create_access"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_create_desc"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/enter_group_access"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="@color/edit_color" />

            <EditText
                android:id="@+id/group_create_modify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_create_access"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/enter_group_modify"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:textColor="@color/edit_color" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>