<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="seaice.app.groupcontact.UserCreateActivity">

    <EditText
        android:id="@+id/user_create_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/enter_name" />

    <EditText
        android:id="@+id/user_create_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_create_name"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/enter_phone"
        android:inputType="phone" />

    <Button
        android:id="@+id/user_create_create"
        style="@style/mybutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_create_phone"
        android:text="@string/action_create_user" />


</RelativeLayout>
